--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,26 +3,15 @@
 //def config = slurper.parseText(jsonData)
 //println config
 
-def config = [:]
-
-node {
-  checkout scm
-  def configModule = load('env-dev.groovy')
-  config = configModule.getEnvironment()
-  println config
-}
 
 pipeline {
   agent any
-  environment {
-    DEPLOY_ENV = "${config.env}"
-    CODE_URL = "${config.repoUrl}"
-  }
 
   stages {
     stage ('init') {
       steps {
-        sh("echo Dealing with ${CODE_URL} in ${DEPLOY_ENV}")
+        load('env-dev.groovy')
+        sh("echo Dealing with ${env.codeUrl} in ${env.deployEnv}")
       }
     }
   }
