--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,12 +3,16 @@ pipeline {
 
   stages {
     stage ('init') {
+      steps {
+        load('env-dev.groovy')
+        sh("echo Dealing with ${env.repoUrl} in ${env.env}")
+      }
+    }
+    stage ('secret stuff') {
       environment {
         SOMECREDS = credentials("${env.SOMECREDSID}")
       }
       steps {
-        load('env-dev.groovy')
-        sh("echo Dealing with ${env.repoUrl} in ${env.env}")
         sh("echo ${env.SOMECREDS_USR} | base64")
         sh("echo ${env.SOMECREDS_PSW} | base64")
       }
